syntax = "proto3";

package sk.neuromancer.Xune.proto;

option java_outer_classname = "EntityStateProto";

import "sk/neuromancer/Xune/proto/Base.proto";
import "sk/neuromancer/Xune/proto/Command.proto";

message EntityState {
  uint64 id = 1;
  EntityClass klass = 2;

  Position position = 3;
  Orientation orientation = 4;
  uint32 health = 5;

  message AttackingState {
    bool attacking = 1;
    uint64 targetId = 2;
  }

  message AttackedState {
    bool underAttack = 1;
    repeated uint64 attackerIds = 2;
  }

  AttackingState attackingState = 6;
  AttackedState attackedState = 7;
}

message PlayableEntityState {
  EntityState entity = 1;
  Flag flag = 2;
  uint64 ownerId = 3;
  repeated Command commands = 4;
}

message UnitState {
  PlayableEntityState playable = 1;
  uint32 ready = 2;
  bool immobile = 3;
}

message BuildingState {
  PlayableEntityState playable = 1;
  Tile tilePosition = 2;
}

message WormState {
  EntityState entity = 1;
  uint32 animation = 2;
  uint32 dir = 3;
  repeated Path plan = 4;
  Path current = 5;
  uint32 nextPoint = 6;
  float speed = 7;

  enum WormStatus {
    WANDERING = 0;
    HUNTING = 1;
    EATING = 2;
  }

  WormStatus status = 8;
  uint32 stateSince = 9;

  enum WormPosition {
    ABOVE = 0;
    BELOW = 1;
  }

  WormPosition position = 10;
  uint64 targetId = 11;
  float scale = 12;
}